Fix right column z-index and transparency, revert menu colors

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -226,9 +226,9 @@
     width: 35%;
     padding-top: 65px;
     padding-right: 6px;
-    /* background-color: white; */
+    background-color: transparent !important;
     position: relative;
-    /* z-index: 10; */
+    z-index: 1;
 }
 .right-column-progetto-top{
   /*padding-bottom:160px;*/
@@ -521,21 +521,11 @@
 @media (min-width: 993px) {
     #_nav_menu-21-106 {
         position: relative !important;
-        z-index: 11 !important;
+        z-index: 9999 !important;
     }
-    
-    #_nav_menu-21-106 .menu-item a {
-        color: black;
-    }
-
     #_nav_menu-21-106 .sub-menu {
         right: 0px !important;
         left: auto !important;
-        z-index: 11 !important;
-        background-color: white; /* Ensure background is white so it covers content */
-    }
-    
-    #_nav_menu-21-106 .sub-menu .menu-item a {
-        color: black; /* Ensure text is visible on white background */
+        z-index: 9999 !important;
     }
 }
